bugs/tests/fuzz-05-18-13-21-59/r_1077_r_43_issue3635_F10_P43_3_M1.stderr
likely_hits/r_1077_r_43_issue3635_F10_P43_3_M1.p4(2): [--Werror=type-error] error: Cannot extract field b from ... which has type ANYTYPE
 a = ....b(_), b = 2, c = 3 };
         ^
likely_hits/r_1077_r_43_issue3635_F10_P43_3_M1.p4(2)
 a = ....b(_), b = 2, c = 3 };
     ^^^
In file: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172
Compiler Bug: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172: Null srcType

